# french-rev-online

./: .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.api.json  vercel.json
api/: [...path].ts  _shared.ts  data.ts  rooms.ts  router.ts
api/rooms/: [id].ts
api/rooms/[id]/: action.ts  ai.ts  join.ts  start.ts
backend/: CMakeLists.txt
backend/src/: data.hpp  engine.cpp  engine.hpp  generated_data.cpp  main.cpp  simulate.cpp
balance-visual/: index.html
data/: cards.json  classes.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  style.css
reports/: balance.md
scripts/: import_data.py
src/shared/: engine.ts  rooms.ts
